--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Valentine Briese <valentinegb@icloud.com>"]
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.121"
