--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["data-structures", "games"]
 [dependencies]
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
+thiserror = "1.0.63"
