--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "beat_saber_map"
-version = "0.3.0-alpha"
+version = "0.3.0"
 authors = ["Valentine Briese <valentinegb@icloud.com>"]
 edition = "2021"
 description = "Read and write Beat Saber maps with Rust."
